--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^2.0.0",
     "@unocss/core": "^0.50.3",
-    "nuxt": "^3.2.3"
+    "nuxt": "^3.2.3",
+    "nuxt-font-loader": "^2.3.1"
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
     "@unocss/nuxt": "^0.50.3",
     "unocss": "^0.50.3",
-    "vite": "^2.9.0"
+    "vite": "^4.1.4",
+    "webpack": "^5.75.0"
   }
 }
