--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@prettier/plugin-pug": "^2.4.1",
     "@unocss/nuxt": "^0.50.3",
+    "pug": "^3.0.2",
+    "sass": "^1.58.3",
     "unocss": "^0.50.3",
     "vite": "^4.1.4",
     "webpack": "^5.75.0"
